--- a/src/pages/demos/RainfallCanvas.astro
+++ b/src/pages/demos/RainfallCanvas.astro
@@ -210,6 +210,7 @@ animate()
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://public.codepenassets.com/embed/index.js"></script>
+<div class="h-10" />
     </DemoSubsection>
   </BaseDemoLayout>
 </Layout>
